Rationalise Commons Collections usage, replacing with idiomatic approaches